<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:keepScreenOn="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="FinalPrayersFragment"
    android:id="@+id/fFinalPrayers">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clText">

        <TextView
            android:id="@+id/tvInvTrinFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="2sp"
            android:text="@string/pry_trinity"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="8sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSubTuum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="2sp"
            android:padding="8dp"
            android:text="@string/fpr_sub_tuum"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInvTrinFP" />

        <TextView
            android:id="@+id/tvExternalInvocationsFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="2sp"
            android:padding="8dp"
            android:text="@string/fpr_invocations_external"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTuum"
            />

        <TextView
            android:id="@+id/tvInvocFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="2sp"
            android:padding="8dp"
            android:text="@string/fpr_invocations"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExternalInvocationsFP" />

        <TextView
            android:id="@+id/tvFinalPrayersFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="2sp"
            android:padding="8dp"
            android:text="@string/fpr_final_prayers"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInvocFP" />

        <TextView
            android:id="@+id/tvRip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:lineSpacingExtra="2sp"
            android:padding="8dp"
            android:text="@string/fpr_rip"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFinalPrayersFP" />

        <TextView
            android:id="@+id/tvInvFinalTrindFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pry_trinity"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:lineSpacingExtra="2sp"
            android:padding="8dp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRip"/>
        </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>